# bgk.old

./: Cargo.toml
src/: error.rs  game.rs  lib.rs
src/consts/: en_us.rs
src/unit_tests/: game.rs  mod.rs
