[package]
authors = ["Brad Gibson <b2b@humanenginuity.com>"]
name = "bgk"
version = "0.1.0"

[lib]
name = "bgk"
path = "src/lib.rs"

[dependencies]
failure = "*"
hesl = { git = "ssh://git@github.com/humanenginuity/hesl" }

[build-dependencies.clippy]
optional = true
version = "*"

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
#panic = "unwind" #required by bench harness; panic setting is ignored
rpath = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
lto = false
opt-level = 0
#panic = "unwind" #panic = "unwind" required by bench harness; panic setting is ignored
rpath = false
